compiler/tests/fixtures/invalid/semantics/reaction_repeat_missing_max.viv
// Invalid: reaction repeat missing max
// NOTE: This may be grammar-prevented (parser requires both 'if' and 'max')

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
            repeat:
                if:
                    @actor.alert > 0
